test/libyul/yulSyntaxTests/invalid/pc_disallowed.yul
{
    pop(pc())
}
// ====
// dialect: qrvmTyped 
// ----
// SyntaxError 2450: (10-12): PC instruction is a low-level QRVM feature. Because of that PC is disallowed in strict assembly.
